# trace_claw

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yaml  example_openclaw_simulator.py  pyproject.toml  test_trace.sh  trace_claw.py  visualize_trace.py
configs/: trace_claw.yaml
configs/grafana/dashboards/: openclaw-timeline.json
configs/grafana/provisioning/dashboards/: dashboards.yml
configs/openclaw/: openclaw.diagnostics.json
configs/otel-collector/: otel-collector-config.yaml
configs/prometheus/: prometheus.yml
src/trace_claw/: __init__.py  cli.py  config.py
src/trace_claw/analyzer/: __init__.py  parser.py  summary.py  timeline.py
src/trace_claw/collector/: __init__.py  base.py  cpu.py  manager.py  memory.py  network.py  process.py
src/trace_claw/exporter/: __init__.py  base.py  event_logger.py  local.py  otel.py
tests/: test_analyzer.py  test_collector.py  test_config.py  test_e2e.py  test_local_tracing.py
